kong-gateway/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: prompty-dev-gateway
    argocd.argoproj.io/managed-by: Helm
    app.kubernetes.io/name: kong
    app.kubernetes.io/version: '2.8'
    argocd.argoproj.io/instance: prompty-dev-gateway
    helm.sh/chart: kong-2.12.0
  name: prompty-dev-gateway
  namespace: kong-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: prompty-dev-gateway
      app.kubernetes.io/name: kong
  template:
    metadata:
      labels:
        app: prompty-dev-gateway-kong
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: prompty-dev-gateway
        argocd.argoproj.io/managed-by: Helm
        app.kubernetes.io/name: kong
        app.kubernetes.io/version: '2.8'
        helm.sh/chart: kong-2.12.0
        version: '2.8'
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: prompty-dev-gateway
          image: kong/kong-gateway:latest
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                  - kong
                  - quit
                  - '--wait=15'
          ports:
            - containerPort: 8000
              name: proxy
              protocal: TCP
            - containerPort: 8001
              name: admin
              protocal: TCP
            - containerPort: 8100
              name: status
              protocal: TCP
            - containerPort: 8443
              name: proxy-https
              protocal: TCP
            - containerPort: 8444
              name: admin-https
              protocal: TCP
          resources:
            requests:
              cpu: 100m
              memory: 0Gi
            limits:
              cpu: 1
              memory: 2Gi
          # TODO: Add liveness and readiness after create health check
          livenessProbe:
            httpGet:
              path: /status
              port: status
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /status
              port: status
              scheme: HTTP
            initialDelaySeconds: 50
            timeoutSeconds: 5
            periodSeconds: 23
            successThreshold: 1
            failureThreshold: 3
