kong-gateway/base/service-kong-admin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: prompty-dev-gateway
    argocd.argoproj.io/managed-by: Helm
    app.kubernetes.io/name: kong
    app.kubernetes.io/version: '2.8'
    argocd.argoproj.io/instance: prompty-dev-gateway
  name: prompty-dev-gateway-kong-admin
  namespace: kong-gateway
spec:
  ports:
    - appProtocol: http
      name: kong-admin
      port: 8001
      protocol: TCP
      targetPort: 8001
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: prompty-dev-gateway
    app.kubernetes.io/name: kong
  type: ClusterIP
