kong-gateway/base/service-kong-custom.yaml
apiVersion: v1
kind: Service
metadata:
  annotation:
    cloud.google.com/backend-config: '{"default": "prompty-dev-gateway"}'
  labels:
    app.kubernetes.io/instance: prompty-dev-gateway
    argocd.argoproj.io/managed-by: Helm
    app.kubernetes.io/name: kong
    app.kubernetes.io/version: '2.8'
    argocd.argoproj.io/instance: prompty-dev-gateway
  name: prompty-dev-gateway-kong-custom
  namespace: kong-gateway
spec:
  ports:
    - name: kong-proxy
      port: 80
      protocol: TCP
      targetPort: proxy
    - name: kong-status
      port: 8100
      protocol: TCP
      targetPort: status
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: prompty-dev-gateway
    app.kubernetes.io/name: kong
  type: NodePort
